<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/CalcTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/firstNumEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:hint="@string/enter_first_number"
        android:ems="17"
        android:layout_marginTop="15dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/CalcTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/secondNumEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:hint="@string/enter_sec_number"
        android:ems="17"
        android:layout_marginTop="15dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/firstNumEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_button"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/firstNumEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus_button"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/firstNumEditText"
        app:layout_constraintLeft_toRightOf="@id/plusButton"
        />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply_button"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/firstNumEditText"
        app:layout_constraintLeft_toRightOf="@id/minusButton"
        />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide_button"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/firstNumEditText"
        app:layout_constraintLeft_toRightOf="@id/multiplyButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>